--- a/conf/demo_config.yaml
+++ b/conf/demo_config.yaml
@@ -1,12 +1,12 @@
-mode: parallel
-containers:
-  - address: http://192.168.31.233:5700
-    username: admin
-    password: admin
-    weigth:  
-    mode: parallel
-    limit: 9999
-theme:  
+mode: parallel #模式 balance(均衡模式)、parallel(平行模式)全部CK
+containers: #容器，可配置多个
+  - address: http://192.168.31.233:5700 青龙2.2、青龙2.8、v1v2v3v4v5访问地址
+    username: admin #用户名
+    password: admin #密码
+    weigth: #权重 balance模式下权重越高分得的ck越多，默认1
+    mode: parallel #单独对容器进行模式设置 
+    limit: 9999 #限制容器ck数目
+theme:  #自定义主题，支持本地、网络路径
 static: ./static
 master: 
 database:  
